Basic setup with example

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "A CLI-like navigation tool for websites that listens to key events and executes commands.",
   "main": "src/index.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run copy-static",
+    "copy-static": "copyfiles -u 1 \"examples/**/*.html\" public/examples",
     "start": "python3 -m http.server 81 --directory public"
   },
   "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
+    "copyfiles": "^2.4.1",
     "typescript": "^4.9.5"
-  },
-  "dependencies": {}
+  }
 }
