--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "es6",
     "module": "es6",
+    "moduleResolution": "node",
+    "skipLibCheck": true,
     "outDir": "./public",
     "rootDir": ".",
     "strict": true,
