fix: Added token to action, to allow running releases

--- a/.github/workflows/tag-version.yml
+++ b/.github/workflows/tag-version.yml
@@ -35,6 +35,8 @@ jobs:
           fi
 
       - name: Create tag
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
