--- a/.github/workflows/tag-version.yml
+++ b/.github/workflows/tag-version.yml
@@ -36,10 +36,10 @@ jobs:
 
       - name: Create and push Git tag
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
+          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
           git tag ${{ steps.check_tag.outputs.tag }}
           git push origin ${{ steps.check_tag.outputs.tag }}
