--- a/.github/workflows/tag-version.yml
+++ b/.github/workflows/tag-version.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Node.js
@@ -34,17 +34,17 @@ jobs:
             exit 1
           fi
 
-      - name: Create and push Git tag
+      - name: Create and push Git tag using auth-origin
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
+          TAG: ${{ steps.check_tag.outputs.tag }}
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
 
-          echo "✅ Remote updated, verifying access..."
-          git ls-remote origin || { echo "❌ Cannot access remote"; exit 1; }
+          # Add a new remote with embedded token
+          git remote add auth-origin https://x-access-token:$GH_PAT@github.com/${{ github.repository }}
 
-          TAG=${{ steps.check_tag.outputs.tag }}
+          # Push the new tag to the authenticated remote
           git tag "$TAG"
-          git push origin "$TAG"
+          git push auth-origin "$TAG"
