--- a/.github/workflows/tag-version.yml
+++ b/.github/workflows/tag-version.yml
@@ -35,26 +35,13 @@ jobs:
             exit 1
           fi
 
-      - name: Debug token access to GitHub (optional but useful)
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
-        run: |
-          echo "🔐 Testing GitHub access with token..."
-          git ls-remote https://x-access-token:$GH_PAT@github.com/${{ github.repository }} || {
-            echo "❌ Token does NOT have access to repo!"
-            exit 1
-          }
-
-      - name: Create and push Git tag
+      - name: Tag and push
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
           TAG: ${{ steps.check_tag.outputs.tag }}
         run: |
-          echo "🏷️ Tagging and pushing: $TAG"
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-
-          # Safe: overwrite origin with authenticated URL
-          git remote set-url origin https://x-access-token:$GH_PAT@github.com/${{ github.repository }}
           git tag "$TAG"
-          git push origin "$TAG"
+          echo "🚀 Pushing tag $TAG"
+          git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }} "$TAG"
