--- a/.github/workflows/tag-version.yml
+++ b/.github/workflows/tag-version.yml
@@ -11,8 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
     steps:
-      - name: Checkout repository
+      - name: Checkout repository using GH_PAT
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GH_PAT }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -35,13 +37,12 @@ jobs:
             exit 1
           fi
 
-      - name: Tag and push
+      - name: Tag and push using authenticated remote
         env:
-          GH_PAT: ${{ secrets.GH_PAT }}
           TAG: ${{ steps.check_tag.outputs.tag }}
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git tag "$TAG"
           echo "🚀 Pushing tag $TAG"
-          git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }} "$TAG"
+          git push origin "$TAG"
