--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "module": "es6",
     "moduleResolution": "node",
     "skipLibCheck": true,
-    "outDir": "./public",
+    "outDir": "./dist", 
+    "declaration": true,
+    "declarationDir": "./dist",
     "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
